# ujumbe-sms-rs

./: .env.sample  .gitignore  .http  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
examples/: credit_balance_inquiry.rs  messages_history.rs  send_sms.rs  send_using_message_bags.rs
src/: client.rs  config.rs  errors.rs  lib.rs  models.rs
